# flower-fed-learning

./: README.md
flower-fed-learning/: README.md  pyproject.toml
flower-fed-learning/flower_fed_learning/: __init__.py  client_app.py  server_app.py  task.py
