[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flower-fed-learning"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.16.0",
    "flwr-datasets[vision]>=0.5.0",
    "tensorflow>=2.11.1,<2.18.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "tony"

[tool.flwr.app.components]
serverapp = "flower_fed_learning.server_app:app"
clientapp = "flower_fed_learning.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 10
local-epochs = 10
batch-size = 54
verbose = false

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10
options.backend.client-resources.num-cpus = 1   # each ClientApp assumes to use 1 CPU
options.backend.client-resources.num-gpus = 0.0 # no GPU access to the ClientApp